// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildRestContract > DELETE route > sets default delete route values 1`] = `
{
  "description": "some description",
  "isEmptyResponseExpected": true,
  "isNonJSONResponseExpected": false,
  "metadata": undefined,
  "method": "delete",
  "pathResolver": [Function],
  "requestHeaderSchema": undefined,
  "requestPathParamsSchema": undefined,
  "requestQuerySchema": undefined,
  "responseHeaderSchema": undefined,
  "responseSchemasByStatusCode": undefined,
  "successResponseBodySchema": ZodObject {
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "shape": {},
      "type": "object",
    },
    "encode": [Function],
    "encodeAsync": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "toJSONSchema": [Function],
    "type": "object",
  },
  "summary": undefined,
  "tags": undefined,
}
`;

exports[`buildRestContract > GET route > resolves path params 1`] = `
{
  "description": undefined,
  "isEmptyResponseExpected": false,
  "isNonJSONResponseExpected": false,
  "metadata": undefined,
  "method": "get",
  "pathResolver": [Function],
  "requestHeaderSchema": undefined,
  "requestPathParamsSchema": ZodObject {
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "shape": {
        "userId": ZodString {
          "base64": [Function],
          "base64url": [Function],
          "cidrv4": [Function],
          "cidrv6": [Function],
          "cuid": [Function],
          "cuid2": [Function],
          "date": [Function],
          "datetime": [Function],
          "decode": [Function],
          "decodeAsync": [Function],
          "def": {
            "type": "string",
          },
          "duration": [Function],
          "e164": [Function],
          "email": [Function],
          "emoji": [Function],
          "encode": [Function],
          "encodeAsync": [Function],
          "format": null,
          "guid": [Function],
          "ipv4": [Function],
          "ipv6": [Function],
          "jwt": [Function],
          "ksuid": [Function],
          "maxLength": null,
          "minLength": null,
          "nanoid": [Function],
          "parse": [Function],
          "parseAsync": [Function],
          "safeDecode": [Function],
          "safeDecodeAsync": [Function],
          "safeEncode": [Function],
          "safeEncodeAsync": [Function],
          "safeParse": [Function],
          "safeParseAsync": [Function],
          "spa": [Function],
          "time": [Function],
          "toJSONSchema": [Function],
          "type": "string",
          "ulid": [Function],
          "url": [Function],
          "uuid": [Function],
          "uuidv4": [Function],
          "uuidv6": [Function],
          "uuidv7": [Function],
          "xid": [Function],
        },
      },
      "type": "object",
    },
    "encode": [Function],
    "encodeAsync": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "toJSONSchema": [Function],
    "type": "object",
  },
  "requestQuerySchema": undefined,
  "responseHeaderSchema": undefined,
  "responseSchemasByStatusCode": undefined,
  "successResponseBodySchema": ZodObject {
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "shape": {},
      "type": "object",
    },
    "encode": [Function],
    "encodeAsync": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "toJSONSchema": [Function],
    "type": "object",
  },
  "summary": undefined,
  "tags": undefined,
}
`;

exports[`buildRestContract > GET route > sets default get route values 1`] = `
{
  "description": "some description",
  "isEmptyResponseExpected": false,
  "isNonJSONResponseExpected": false,
  "metadata": {
    "hello": "world",
  },
  "method": "get",
  "pathResolver": [Function],
  "requestHeaderSchema": undefined,
  "requestPathParamsSchema": undefined,
  "requestQuerySchema": undefined,
  "responseHeaderSchema": undefined,
  "responseSchemasByStatusCode": {
    "200": ZodObject {
      "decode": [Function],
      "decodeAsync": [Function],
      "def": {
        "shape": {},
        "type": "object",
      },
      "encode": [Function],
      "encodeAsync": [Function],
      "parse": [Function],
      "parseAsync": [Function],
      "safeDecode": [Function],
      "safeDecodeAsync": [Function],
      "safeEncode": [Function],
      "safeEncodeAsync": [Function],
      "safeParse": [Function],
      "safeParseAsync": [Function],
      "spa": [Function],
      "toJSONSchema": [Function],
      "type": "object",
    },
    "400": ZodObject {
      "decode": [Function],
      "decodeAsync": [Function],
      "def": {
        "shape": {
          "message": ZodString {
            "base64": [Function],
            "base64url": [Function],
            "cidrv4": [Function],
            "cidrv6": [Function],
            "cuid": [Function],
            "cuid2": [Function],
            "date": [Function],
            "datetime": [Function],
            "decode": [Function],
            "decodeAsync": [Function],
            "def": {
              "type": "string",
            },
            "duration": [Function],
            "e164": [Function],
            "email": [Function],
            "emoji": [Function],
            "encode": [Function],
            "encodeAsync": [Function],
            "format": null,
            "guid": [Function],
            "ipv4": [Function],
            "ipv6": [Function],
            "jwt": [Function],
            "ksuid": [Function],
            "maxLength": null,
            "minLength": null,
            "nanoid": [Function],
            "parse": [Function],
            "parseAsync": [Function],
            "safeDecode": [Function],
            "safeDecodeAsync": [Function],
            "safeEncode": [Function],
            "safeEncodeAsync": [Function],
            "safeParse": [Function],
            "safeParseAsync": [Function],
            "spa": [Function],
            "time": [Function],
            "toJSONSchema": [Function],
            "type": "string",
            "ulid": [Function],
            "url": [Function],
            "uuid": [Function],
            "uuidv4": [Function],
            "uuidv6": [Function],
            "uuidv7": [Function],
            "xid": [Function],
          },
        },
        "type": "object",
      },
      "encode": [Function],
      "encodeAsync": [Function],
      "parse": [Function],
      "parseAsync": [Function],
      "safeDecode": [Function],
      "safeDecodeAsync": [Function],
      "safeEncode": [Function],
      "safeEncodeAsync": [Function],
      "safeParse": [Function],
      "safeParseAsync": [Function],
      "spa": [Function],
      "toJSONSchema": [Function],
      "type": "object",
    },
  },
  "successResponseBodySchema": ZodObject {
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "shape": {},
      "type": "object",
    },
    "encode": [Function],
    "encodeAsync": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "toJSONSchema": [Function],
    "type": "object",
  },
  "summary": undefined,
  "tags": undefined,
}
`;

exports[`buildRestContract > POST route (payload) > sets default payload route values 1`] = `
{
  "description": "some description",
  "isEmptyResponseExpected": false,
  "isNonJSONResponseExpected": false,
  "metadata": undefined,
  "method": "post",
  "pathResolver": [Function],
  "requestBodySchema": ZodObject {
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "shape": {},
      "type": "object",
    },
    "encode": [Function],
    "encodeAsync": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "toJSONSchema": [Function],
    "type": "object",
  },
  "requestHeaderSchema": undefined,
  "requestPathParamsSchema": undefined,
  "requestQuerySchema": undefined,
  "responseHeaderSchema": undefined,
  "responseSchemasByStatusCode": {
    "200": ZodObject {
      "decode": [Function],
      "decodeAsync": [Function],
      "def": {
        "shape": {},
        "type": "object",
      },
      "encode": [Function],
      "encodeAsync": [Function],
      "parse": [Function],
      "parseAsync": [Function],
      "safeDecode": [Function],
      "safeDecodeAsync": [Function],
      "safeEncode": [Function],
      "safeEncodeAsync": [Function],
      "safeParse": [Function],
      "safeParseAsync": [Function],
      "spa": [Function],
      "toJSONSchema": [Function],
      "type": "object",
    },
    "400": ZodObject {
      "decode": [Function],
      "decodeAsync": [Function],
      "def": {
        "shape": {
          "message": ZodString {
            "base64": [Function],
            "base64url": [Function],
            "cidrv4": [Function],
            "cidrv6": [Function],
            "cuid": [Function],
            "cuid2": [Function],
            "date": [Function],
            "datetime": [Function],
            "decode": [Function],
            "decodeAsync": [Function],
            "def": {
              "type": "string",
            },
            "duration": [Function],
            "e164": [Function],
            "email": [Function],
            "emoji": [Function],
            "encode": [Function],
            "encodeAsync": [Function],
            "format": null,
            "guid": [Function],
            "ipv4": [Function],
            "ipv6": [Function],
            "jwt": [Function],
            "ksuid": [Function],
            "maxLength": null,
            "minLength": null,
            "nanoid": [Function],
            "parse": [Function],
            "parseAsync": [Function],
            "safeDecode": [Function],
            "safeDecodeAsync": [Function],
            "safeEncode": [Function],
            "safeEncodeAsync": [Function],
            "safeParse": [Function],
            "safeParseAsync": [Function],
            "spa": [Function],
            "time": [Function],
            "toJSONSchema": [Function],
            "type": "string",
            "ulid": [Function],
            "url": [Function],
            "uuid": [Function],
            "uuidv4": [Function],
            "uuidv6": [Function],
            "uuidv7": [Function],
            "xid": [Function],
          },
        },
        "type": "object",
      },
      "encode": [Function],
      "encodeAsync": [Function],
      "parse": [Function],
      "parseAsync": [Function],
      "safeDecode": [Function],
      "safeDecodeAsync": [Function],
      "safeEncode": [Function],
      "safeEncodeAsync": [Function],
      "safeParse": [Function],
      "safeParseAsync": [Function],
      "spa": [Function],
      "toJSONSchema": [Function],
      "type": "object",
    },
  },
  "successResponseBodySchema": ZodObject {
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "shape": {},
      "type": "object",
    },
    "encode": [Function],
    "encodeAsync": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "toJSONSchema": [Function],
    "type": "object",
  },
  "summary": undefined,
  "tags": undefined,
}
`;

exports[`buildRestContract > responseHeaderSchema > DELETE route > works with both request and response header schemas 1`] = `
{
  "description": "Delete data with rate limiting",
  "isEmptyResponseExpected": true,
  "isNonJSONResponseExpected": false,
  "metadata": undefined,
  "method": "delete",
  "pathResolver": [Function],
  "requestHeaderSchema": ZodObject {
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "shape": {
        "authorization": ZodString {
          "base64": [Function],
          "base64url": [Function],
          "cidrv4": [Function],
          "cidrv6": [Function],
          "cuid": [Function],
          "cuid2": [Function],
          "date": [Function],
          "datetime": [Function],
          "decode": [Function],
          "decodeAsync": [Function],
          "def": {
            "type": "string",
          },
          "duration": [Function],
          "e164": [Function],
          "email": [Function],
          "emoji": [Function],
          "encode": [Function],
          "encodeAsync": [Function],
          "format": null,
          "guid": [Function],
          "ipv4": [Function],
          "ipv6": [Function],
          "jwt": [Function],
          "ksuid": [Function],
          "maxLength": null,
          "minLength": null,
          "nanoid": [Function],
          "parse": [Function],
          "parseAsync": [Function],
          "safeDecode": [Function],
          "safeDecodeAsync": [Function],
          "safeEncode": [Function],
          "safeEncodeAsync": [Function],
          "safeParse": [Function],
          "safeParseAsync": [Function],
          "spa": [Function],
          "time": [Function],
          "toJSONSchema": [Function],
          "type": "string",
          "ulid": [Function],
          "url": [Function],
          "uuid": [Function],
          "uuidv4": [Function],
          "uuidv6": [Function],
          "uuidv7": [Function],
          "xid": [Function],
        },
        "x-api-key": ZodString {
          "base64": [Function],
          "base64url": [Function],
          "cidrv4": [Function],
          "cidrv6": [Function],
          "cuid": [Function],
          "cuid2": [Function],
          "date": [Function],
          "datetime": [Function],
          "decode": [Function],
          "decodeAsync": [Function],
          "def": {
            "type": "string",
          },
          "duration": [Function],
          "e164": [Function],
          "email": [Function],
          "emoji": [Function],
          "encode": [Function],
          "encodeAsync": [Function],
          "format": null,
          "guid": [Function],
          "ipv4": [Function],
          "ipv6": [Function],
          "jwt": [Function],
          "ksuid": [Function],
          "maxLength": null,
          "minLength": null,
          "nanoid": [Function],
          "parse": [Function],
          "parseAsync": [Function],
          "safeDecode": [Function],
          "safeDecodeAsync": [Function],
          "safeEncode": [Function],
          "safeEncodeAsync": [Function],
          "safeParse": [Function],
          "safeParseAsync": [Function],
          "spa": [Function],
          "time": [Function],
          "toJSONSchema": [Function],
          "type": "string",
          "ulid": [Function],
          "url": [Function],
          "uuid": [Function],
          "uuidv4": [Function],
          "uuidv6": [Function],
          "uuidv7": [Function],
          "xid": [Function],
        },
      },
      "type": "object",
    },
    "encode": [Function],
    "encodeAsync": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "toJSONSchema": [Function],
    "type": "object",
  },
  "requestPathParamsSchema": undefined,
  "requestQuerySchema": undefined,
  "responseHeaderSchema": ZodObject {
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "shape": {
        "x-ratelimit-limit": ZodString {
          "base64": [Function],
          "base64url": [Function],
          "cidrv4": [Function],
          "cidrv6": [Function],
          "cuid": [Function],
          "cuid2": [Function],
          "date": [Function],
          "datetime": [Function],
          "decode": [Function],
          "decodeAsync": [Function],
          "def": {
            "type": "string",
          },
          "duration": [Function],
          "e164": [Function],
          "email": [Function],
          "emoji": [Function],
          "encode": [Function],
          "encodeAsync": [Function],
          "format": null,
          "guid": [Function],
          "ipv4": [Function],
          "ipv6": [Function],
          "jwt": [Function],
          "ksuid": [Function],
          "maxLength": null,
          "minLength": null,
          "nanoid": [Function],
          "parse": [Function],
          "parseAsync": [Function],
          "safeDecode": [Function],
          "safeDecodeAsync": [Function],
          "safeEncode": [Function],
          "safeEncodeAsync": [Function],
          "safeParse": [Function],
          "safeParseAsync": [Function],
          "spa": [Function],
          "time": [Function],
          "toJSONSchema": [Function],
          "type": "string",
          "ulid": [Function],
          "url": [Function],
          "uuid": [Function],
          "uuidv4": [Function],
          "uuidv6": [Function],
          "uuidv7": [Function],
          "xid": [Function],
        },
        "x-ratelimit-remaining": ZodString {
          "base64": [Function],
          "base64url": [Function],
          "cidrv4": [Function],
          "cidrv6": [Function],
          "cuid": [Function],
          "cuid2": [Function],
          "date": [Function],
          "datetime": [Function],
          "decode": [Function],
          "decodeAsync": [Function],
          "def": {
            "type": "string",
          },
          "duration": [Function],
          "e164": [Function],
          "email": [Function],
          "emoji": [Function],
          "encode": [Function],
          "encodeAsync": [Function],
          "format": null,
          "guid": [Function],
          "ipv4": [Function],
          "ipv6": [Function],
          "jwt": [Function],
          "ksuid": [Function],
          "maxLength": null,
          "minLength": null,
          "nanoid": [Function],
          "parse": [Function],
          "parseAsync": [Function],
          "safeDecode": [Function],
          "safeDecodeAsync": [Function],
          "safeEncode": [Function],
          "safeEncodeAsync": [Function],
          "safeParse": [Function],
          "safeParseAsync": [Function],
          "spa": [Function],
          "time": [Function],
          "toJSONSchema": [Function],
          "type": "string",
          "ulid": [Function],
          "url": [Function],
          "uuid": [Function],
          "uuidv4": [Function],
          "uuidv6": [Function],
          "uuidv7": [Function],
          "xid": [Function],
        },
        "x-ratelimit-reset": ZodString {
          "base64": [Function],
          "base64url": [Function],
          "cidrv4": [Function],
          "cidrv6": [Function],
          "cuid": [Function],
          "cuid2": [Function],
          "date": [Function],
          "datetime": [Function],
          "decode": [Function],
          "decodeAsync": [Function],
          "def": {
            "type": "string",
          },
          "duration": [Function],
          "e164": [Function],
          "email": [Function],
          "emoji": [Function],
          "encode": [Function],
          "encodeAsync": [Function],
          "format": null,
          "guid": [Function],
          "ipv4": [Function],
          "ipv6": [Function],
          "jwt": [Function],
          "ksuid": [Function],
          "maxLength": null,
          "minLength": null,
          "nanoid": [Function],
          "parse": [Function],
          "parseAsync": [Function],
          "safeDecode": [Function],
          "safeDecodeAsync": [Function],
          "safeEncode": [Function],
          "safeEncodeAsync": [Function],
          "safeParse": [Function],
          "safeParseAsync": [Function],
          "spa": [Function],
          "time": [Function],
          "toJSONSchema": [Function],
          "type": "string",
          "ulid": [Function],
          "url": [Function],
          "uuid": [Function],
          "uuidv4": [Function],
          "uuidv6": [Function],
          "uuidv7": [Function],
          "xid": [Function],
        },
      },
      "type": "object",
    },
    "encode": [Function],
    "encodeAsync": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "toJSONSchema": [Function],
    "type": "object",
  },
  "responseSchemasByStatusCode": undefined,
  "successResponseBodySchema": ZodObject {
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "shape": {},
      "type": "object",
    },
    "encode": [Function],
    "encodeAsync": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "toJSONSchema": [Function],
    "type": "object",
  },
  "summary": undefined,
  "tags": undefined,
}
`;

exports[`buildRestContract > responseHeaderSchema > GET route > validates response header schema with path params 1`] = `
{
  "description": undefined,
  "isEmptyResponseExpected": false,
  "isNonJSONResponseExpected": false,
  "metadata": undefined,
  "method": "get",
  "pathResolver": [Function],
  "requestHeaderSchema": undefined,
  "requestPathParamsSchema": ZodObject {
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "shape": {
        "userId": ZodString {
          "base64": [Function],
          "base64url": [Function],
          "cidrv4": [Function],
          "cidrv6": [Function],
          "cuid": [Function],
          "cuid2": [Function],
          "date": [Function],
          "datetime": [Function],
          "decode": [Function],
          "decodeAsync": [Function],
          "def": {
            "type": "string",
          },
          "duration": [Function],
          "e164": [Function],
          "email": [Function],
          "emoji": [Function],
          "encode": [Function],
          "encodeAsync": [Function],
          "format": null,
          "guid": [Function],
          "ipv4": [Function],
          "ipv6": [Function],
          "jwt": [Function],
          "ksuid": [Function],
          "maxLength": null,
          "minLength": null,
          "nanoid": [Function],
          "parse": [Function],
          "parseAsync": [Function],
          "safeDecode": [Function],
          "safeDecodeAsync": [Function],
          "safeEncode": [Function],
          "safeEncodeAsync": [Function],
          "safeParse": [Function],
          "safeParseAsync": [Function],
          "spa": [Function],
          "time": [Function],
          "toJSONSchema": [Function],
          "type": "string",
          "ulid": [Function],
          "url": [Function],
          "uuid": [Function],
          "uuidv4": [Function],
          "uuidv6": [Function],
          "uuidv7": [Function],
          "xid": [Function],
        },
      },
      "type": "object",
    },
    "encode": [Function],
    "encodeAsync": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "toJSONSchema": [Function],
    "type": "object",
  },
  "requestQuerySchema": undefined,
  "responseHeaderSchema": ZodObject {
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "shape": {
        "x-ratelimit-limit": ZodString {
          "base64": [Function],
          "base64url": [Function],
          "cidrv4": [Function],
          "cidrv6": [Function],
          "cuid": [Function],
          "cuid2": [Function],
          "date": [Function],
          "datetime": [Function],
          "decode": [Function],
          "decodeAsync": [Function],
          "def": {
            "type": "string",
          },
          "duration": [Function],
          "e164": [Function],
          "email": [Function],
          "emoji": [Function],
          "encode": [Function],
          "encodeAsync": [Function],
          "format": null,
          "guid": [Function],
          "ipv4": [Function],
          "ipv6": [Function],
          "jwt": [Function],
          "ksuid": [Function],
          "maxLength": null,
          "minLength": null,
          "nanoid": [Function],
          "parse": [Function],
          "parseAsync": [Function],
          "safeDecode": [Function],
          "safeDecodeAsync": [Function],
          "safeEncode": [Function],
          "safeEncodeAsync": [Function],
          "safeParse": [Function],
          "safeParseAsync": [Function],
          "spa": [Function],
          "time": [Function],
          "toJSONSchema": [Function],
          "type": "string",
          "ulid": [Function],
          "url": [Function],
          "uuid": [Function],
          "uuidv4": [Function],
          "uuidv6": [Function],
          "uuidv7": [Function],
          "xid": [Function],
        },
        "x-ratelimit-remaining": ZodString {
          "base64": [Function],
          "base64url": [Function],
          "cidrv4": [Function],
          "cidrv6": [Function],
          "cuid": [Function],
          "cuid2": [Function],
          "date": [Function],
          "datetime": [Function],
          "decode": [Function],
          "decodeAsync": [Function],
          "def": {
            "type": "string",
          },
          "duration": [Function],
          "e164": [Function],
          "email": [Function],
          "emoji": [Function],
          "encode": [Function],
          "encodeAsync": [Function],
          "format": null,
          "guid": [Function],
          "ipv4": [Function],
          "ipv6": [Function],
          "jwt": [Function],
          "ksuid": [Function],
          "maxLength": null,
          "minLength": null,
          "nanoid": [Function],
          "parse": [Function],
          "parseAsync": [Function],
          "safeDecode": [Function],
          "safeDecodeAsync": [Function],
          "safeEncode": [Function],
          "safeEncodeAsync": [Function],
          "safeParse": [Function],
          "safeParseAsync": [Function],
          "spa": [Function],
          "time": [Function],
          "toJSONSchema": [Function],
          "type": "string",
          "ulid": [Function],
          "url": [Function],
          "uuid": [Function],
          "uuidv4": [Function],
          "uuidv6": [Function],
          "uuidv7": [Function],
          "xid": [Function],
        },
        "x-ratelimit-reset": ZodString {
          "base64": [Function],
          "base64url": [Function],
          "cidrv4": [Function],
          "cidrv6": [Function],
          "cuid": [Function],
          "cuid2": [Function],
          "date": [Function],
          "datetime": [Function],
          "decode": [Function],
          "decodeAsync": [Function],
          "def": {
            "type": "string",
          },
          "duration": [Function],
          "e164": [Function],
          "email": [Function],
          "emoji": [Function],
          "encode": [Function],
          "encodeAsync": [Function],
          "format": null,
          "guid": [Function],
          "ipv4": [Function],
          "ipv6": [Function],
          "jwt": [Function],
          "ksuid": [Function],
          "maxLength": null,
          "minLength": null,
          "nanoid": [Function],
          "parse": [Function],
          "parseAsync": [Function],
          "safeDecode": [Function],
          "safeDecodeAsync": [Function],
          "safeEncode": [Function],
          "safeEncodeAsync": [Function],
          "safeParse": [Function],
          "safeParseAsync": [Function],
          "spa": [Function],
          "time": [Function],
          "toJSONSchema": [Function],
          "type": "string",
          "ulid": [Function],
          "url": [Function],
          "uuid": [Function],
          "uuidv4": [Function],
          "uuidv6": [Function],
          "uuidv7": [Function],
          "xid": [Function],
        },
      },
      "type": "object",
    },
    "encode": [Function],
    "encodeAsync": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "toJSONSchema": [Function],
    "type": "object",
  },
  "responseSchemasByStatusCode": undefined,
  "successResponseBodySchema": ZodObject {
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "shape": {},
      "type": "object",
    },
    "encode": [Function],
    "encodeAsync": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "toJSONSchema": [Function],
    "type": "object",
  },
  "summary": undefined,
  "tags": undefined,
}
`;

exports[`buildRestContract > responseHeaderSchema > GET route > works with both request and response header schemas 1`] = `
{
  "description": "Get data with rate limiting",
  "isEmptyResponseExpected": false,
  "isNonJSONResponseExpected": false,
  "metadata": undefined,
  "method": "get",
  "pathResolver": [Function],
  "requestHeaderSchema": ZodObject {
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "shape": {
        "authorization": ZodString {
          "base64": [Function],
          "base64url": [Function],
          "cidrv4": [Function],
          "cidrv6": [Function],
          "cuid": [Function],
          "cuid2": [Function],
          "date": [Function],
          "datetime": [Function],
          "decode": [Function],
          "decodeAsync": [Function],
          "def": {
            "type": "string",
          },
          "duration": [Function],
          "e164": [Function],
          "email": [Function],
          "emoji": [Function],
          "encode": [Function],
          "encodeAsync": [Function],
          "format": null,
          "guid": [Function],
          "ipv4": [Function],
          "ipv6": [Function],
          "jwt": [Function],
          "ksuid": [Function],
          "maxLength": null,
          "minLength": null,
          "nanoid": [Function],
          "parse": [Function],
          "parseAsync": [Function],
          "safeDecode": [Function],
          "safeDecodeAsync": [Function],
          "safeEncode": [Function],
          "safeEncodeAsync": [Function],
          "safeParse": [Function],
          "safeParseAsync": [Function],
          "spa": [Function],
          "time": [Function],
          "toJSONSchema": [Function],
          "type": "string",
          "ulid": [Function],
          "url": [Function],
          "uuid": [Function],
          "uuidv4": [Function],
          "uuidv6": [Function],
          "uuidv7": [Function],
          "xid": [Function],
        },
        "x-api-key": ZodString {
          "base64": [Function],
          "base64url": [Function],
          "cidrv4": [Function],
          "cidrv6": [Function],
          "cuid": [Function],
          "cuid2": [Function],
          "date": [Function],
          "datetime": [Function],
          "decode": [Function],
          "decodeAsync": [Function],
          "def": {
            "type": "string",
          },
          "duration": [Function],
          "e164": [Function],
          "email": [Function],
          "emoji": [Function],
          "encode": [Function],
          "encodeAsync": [Function],
          "format": null,
          "guid": [Function],
          "ipv4": [Function],
          "ipv6": [Function],
          "jwt": [Function],
          "ksuid": [Function],
          "maxLength": null,
          "minLength": null,
          "nanoid": [Function],
          "parse": [Function],
          "parseAsync": [Function],
          "safeDecode": [Function],
          "safeDecodeAsync": [Function],
          "safeEncode": [Function],
          "safeEncodeAsync": [Function],
          "safeParse": [Function],
          "safeParseAsync": [Function],
          "spa": [Function],
          "time": [Function],
          "toJSONSchema": [Function],
          "type": "string",
          "ulid": [Function],
          "url": [Function],
          "uuid": [Function],
          "uuidv4": [Function],
          "uuidv6": [Function],
          "uuidv7": [Function],
          "xid": [Function],
        },
      },
      "type": "object",
    },
    "encode": [Function],
    "encodeAsync": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "toJSONSchema": [Function],
    "type": "object",
  },
  "requestPathParamsSchema": undefined,
  "requestQuerySchema": undefined,
  "responseHeaderSchema": ZodObject {
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "shape": {
        "x-ratelimit-limit": ZodString {
          "base64": [Function],
          "base64url": [Function],
          "cidrv4": [Function],
          "cidrv6": [Function],
          "cuid": [Function],
          "cuid2": [Function],
          "date": [Function],
          "datetime": [Function],
          "decode": [Function],
          "decodeAsync": [Function],
          "def": {
            "type": "string",
          },
          "duration": [Function],
          "e164": [Function],
          "email": [Function],
          "emoji": [Function],
          "encode": [Function],
          "encodeAsync": [Function],
          "format": null,
          "guid": [Function],
          "ipv4": [Function],
          "ipv6": [Function],
          "jwt": [Function],
          "ksuid": [Function],
          "maxLength": null,
          "minLength": null,
          "nanoid": [Function],
          "parse": [Function],
          "parseAsync": [Function],
          "safeDecode": [Function],
          "safeDecodeAsync": [Function],
          "safeEncode": [Function],
          "safeEncodeAsync": [Function],
          "safeParse": [Function],
          "safeParseAsync": [Function],
          "spa": [Function],
          "time": [Function],
          "toJSONSchema": [Function],
          "type": "string",
          "ulid": [Function],
          "url": [Function],
          "uuid": [Function],
          "uuidv4": [Function],
          "uuidv6": [Function],
          "uuidv7": [Function],
          "xid": [Function],
        },
        "x-ratelimit-remaining": ZodString {
          "base64": [Function],
          "base64url": [Function],
          "cidrv4": [Function],
          "cidrv6": [Function],
          "cuid": [Function],
          "cuid2": [Function],
          "date": [Function],
          "datetime": [Function],
          "decode": [Function],
          "decodeAsync": [Function],
          "def": {
            "type": "string",
          },
          "duration": [Function],
          "e164": [Function],
          "email": [Function],
          "emoji": [Function],
          "encode": [Function],
          "encodeAsync": [Function],
          "format": null,
          "guid": [Function],
          "ipv4": [Function],
          "ipv6": [Function],
          "jwt": [Function],
          "ksuid": [Function],
          "maxLength": null,
          "minLength": null,
          "nanoid": [Function],
          "parse": [Function],
          "parseAsync": [Function],
          "safeDecode": [Function],
          "safeDecodeAsync": [Function],
          "safeEncode": [Function],
          "safeEncodeAsync": [Function],
          "safeParse": [Function],
          "safeParseAsync": [Function],
          "spa": [Function],
          "time": [Function],
          "toJSONSchema": [Function],
          "type": "string",
          "ulid": [Function],
          "url": [Function],
          "uuid": [Function],
          "uuidv4": [Function],
          "uuidv6": [Function],
          "uuidv7": [Function],
          "xid": [Function],
        },
        "x-ratelimit-reset": ZodString {
          "base64": [Function],
          "base64url": [Function],
          "cidrv4": [Function],
          "cidrv6": [Function],
          "cuid": [Function],
          "cuid2": [Function],
          "date": [Function],
          "datetime": [Function],
          "decode": [Function],
          "decodeAsync": [Function],
          "def": {
            "type": "string",
          },
          "duration": [Function],
          "e164": [Function],
          "email": [Function],
          "emoji": [Function],
          "encode": [Function],
          "encodeAsync": [Function],
          "format": null,
          "guid": [Function],
          "ipv4": [Function],
          "ipv6": [Function],
          "jwt": [Function],
          "ksuid": [Function],
          "maxLength": null,
          "minLength": null,
          "nanoid": [Function],
          "parse": [Function],
          "parseAsync": [Function],
          "safeDecode": [Function],
          "safeDecodeAsync": [Function],
          "safeEncode": [Function],
          "safeEncodeAsync": [Function],
          "safeParse": [Function],
          "safeParseAsync": [Function],
          "spa": [Function],
          "time": [Function],
          "toJSONSchema": [Function],
          "type": "string",
          "ulid": [Function],
          "url": [Function],
          "uuid": [Function],
          "uuidv4": [Function],
          "uuidv6": [Function],
          "uuidv7": [Function],
          "xid": [Function],
        },
      },
      "type": "object",
    },
    "encode": [Function],
    "encodeAsync": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "toJSONSchema": [Function],
    "type": "object",
  },
  "responseSchemasByStatusCode": undefined,
  "successResponseBodySchema": ZodObject {
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "shape": {},
      "type": "object",
    },
    "encode": [Function],
    "encodeAsync": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "toJSONSchema": [Function],
    "type": "object",
  },
  "summary": undefined,
  "tags": undefined,
}
`;

exports[`buildRestContract > responseHeaderSchema > POST route > works with both request and response header schemas 1`] = `
{
  "description": undefined,
  "isEmptyResponseExpected": false,
  "isNonJSONResponseExpected": false,
  "metadata": undefined,
  "method": "post",
  "pathResolver": [Function],
  "requestBodySchema": ZodObject {
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "shape": {},
      "type": "object",
    },
    "encode": [Function],
    "encodeAsync": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "toJSONSchema": [Function],
    "type": "object",
  },
  "requestHeaderSchema": ZodObject {
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "shape": {
        "authorization": ZodString {
          "base64": [Function],
          "base64url": [Function],
          "cidrv4": [Function],
          "cidrv6": [Function],
          "cuid": [Function],
          "cuid2": [Function],
          "date": [Function],
          "datetime": [Function],
          "decode": [Function],
          "decodeAsync": [Function],
          "def": {
            "type": "string",
          },
          "duration": [Function],
          "e164": [Function],
          "email": [Function],
          "emoji": [Function],
          "encode": [Function],
          "encodeAsync": [Function],
          "format": null,
          "guid": [Function],
          "ipv4": [Function],
          "ipv6": [Function],
          "jwt": [Function],
          "ksuid": [Function],
          "maxLength": null,
          "minLength": null,
          "nanoid": [Function],
          "parse": [Function],
          "parseAsync": [Function],
          "safeDecode": [Function],
          "safeDecodeAsync": [Function],
          "safeEncode": [Function],
          "safeEncodeAsync": [Function],
          "safeParse": [Function],
          "safeParseAsync": [Function],
          "spa": [Function],
          "time": [Function],
          "toJSONSchema": [Function],
          "type": "string",
          "ulid": [Function],
          "url": [Function],
          "uuid": [Function],
          "uuidv4": [Function],
          "uuidv6": [Function],
          "uuidv7": [Function],
          "xid": [Function],
        },
        "x-api-key": ZodString {
          "base64": [Function],
          "base64url": [Function],
          "cidrv4": [Function],
          "cidrv6": [Function],
          "cuid": [Function],
          "cuid2": [Function],
          "date": [Function],
          "datetime": [Function],
          "decode": [Function],
          "decodeAsync": [Function],
          "def": {
            "type": "string",
          },
          "duration": [Function],
          "e164": [Function],
          "email": [Function],
          "emoji": [Function],
          "encode": [Function],
          "encodeAsync": [Function],
          "format": null,
          "guid": [Function],
          "ipv4": [Function],
          "ipv6": [Function],
          "jwt": [Function],
          "ksuid": [Function],
          "maxLength": null,
          "minLength": null,
          "nanoid": [Function],
          "parse": [Function],
          "parseAsync": [Function],
          "safeDecode": [Function],
          "safeDecodeAsync": [Function],
          "safeEncode": [Function],
          "safeEncodeAsync": [Function],
          "safeParse": [Function],
          "safeParseAsync": [Function],
          "spa": [Function],
          "time": [Function],
          "toJSONSchema": [Function],
          "type": "string",
          "ulid": [Function],
          "url": [Function],
          "uuid": [Function],
          "uuidv4": [Function],
          "uuidv6": [Function],
          "uuidv7": [Function],
          "xid": [Function],
        },
      },
      "type": "object",
    },
    "encode": [Function],
    "encodeAsync": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "toJSONSchema": [Function],
    "type": "object",
  },
  "requestPathParamsSchema": undefined,
  "requestQuerySchema": undefined,
  "responseHeaderSchema": ZodObject {
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "shape": {
        "x-ratelimit-limit": ZodString {
          "base64": [Function],
          "base64url": [Function],
          "cidrv4": [Function],
          "cidrv6": [Function],
          "cuid": [Function],
          "cuid2": [Function],
          "date": [Function],
          "datetime": [Function],
          "decode": [Function],
          "decodeAsync": [Function],
          "def": {
            "type": "string",
          },
          "duration": [Function],
          "e164": [Function],
          "email": [Function],
          "emoji": [Function],
          "encode": [Function],
          "encodeAsync": [Function],
          "format": null,
          "guid": [Function],
          "ipv4": [Function],
          "ipv6": [Function],
          "jwt": [Function],
          "ksuid": [Function],
          "maxLength": null,
          "minLength": null,
          "nanoid": [Function],
          "parse": [Function],
          "parseAsync": [Function],
          "safeDecode": [Function],
          "safeDecodeAsync": [Function],
          "safeEncode": [Function],
          "safeEncodeAsync": [Function],
          "safeParse": [Function],
          "safeParseAsync": [Function],
          "spa": [Function],
          "time": [Function],
          "toJSONSchema": [Function],
          "type": "string",
          "ulid": [Function],
          "url": [Function],
          "uuid": [Function],
          "uuidv4": [Function],
          "uuidv6": [Function],
          "uuidv7": [Function],
          "xid": [Function],
        },
        "x-ratelimit-remaining": ZodString {
          "base64": [Function],
          "base64url": [Function],
          "cidrv4": [Function],
          "cidrv6": [Function],
          "cuid": [Function],
          "cuid2": [Function],
          "date": [Function],
          "datetime": [Function],
          "decode": [Function],
          "decodeAsync": [Function],
          "def": {
            "type": "string",
          },
          "duration": [Function],
          "e164": [Function],
          "email": [Function],
          "emoji": [Function],
          "encode": [Function],
          "encodeAsync": [Function],
          "format": null,
          "guid": [Function],
          "ipv4": [Function],
          "ipv6": [Function],
          "jwt": [Function],
          "ksuid": [Function],
          "maxLength": null,
          "minLength": null,
          "nanoid": [Function],
          "parse": [Function],
          "parseAsync": [Function],
          "safeDecode": [Function],
          "safeDecodeAsync": [Function],
          "safeEncode": [Function],
          "safeEncodeAsync": [Function],
          "safeParse": [Function],
          "safeParseAsync": [Function],
          "spa": [Function],
          "time": [Function],
          "toJSONSchema": [Function],
          "type": "string",
          "ulid": [Function],
          "url": [Function],
          "uuid": [Function],
          "uuidv4": [Function],
          "uuidv6": [Function],
          "uuidv7": [Function],
          "xid": [Function],
        },
        "x-ratelimit-reset": ZodString {
          "base64": [Function],
          "base64url": [Function],
          "cidrv4": [Function],
          "cidrv6": [Function],
          "cuid": [Function],
          "cuid2": [Function],
          "date": [Function],
          "datetime": [Function],
          "decode": [Function],
          "decodeAsync": [Function],
          "def": {
            "type": "string",
          },
          "duration": [Function],
          "e164": [Function],
          "email": [Function],
          "emoji": [Function],
          "encode": [Function],
          "encodeAsync": [Function],
          "format": null,
          "guid": [Function],
          "ipv4": [Function],
          "ipv6": [Function],
          "jwt": [Function],
          "ksuid": [Function],
          "maxLength": null,
          "minLength": null,
          "nanoid": [Function],
          "parse": [Function],
          "parseAsync": [Function],
          "safeDecode": [Function],
          "safeDecodeAsync": [Function],
          "safeEncode": [Function],
          "safeEncodeAsync": [Function],
          "safeParse": [Function],
          "safeParseAsync": [Function],
          "spa": [Function],
          "time": [Function],
          "toJSONSchema": [Function],
          "type": "string",
          "ulid": [Function],
          "url": [Function],
          "uuid": [Function],
          "uuidv4": [Function],
          "uuidv6": [Function],
          "uuidv7": [Function],
          "xid": [Function],
        },
      },
      "type": "object",
    },
    "encode": [Function],
    "encodeAsync": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "toJSONSchema": [Function],
    "type": "object",
  },
  "responseSchemasByStatusCode": undefined,
  "successResponseBodySchema": ZodObject {
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "shape": {},
      "type": "object",
    },
    "encode": [Function],
    "encodeAsync": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "toJSONSchema": [Function],
    "type": "object",
  },
  "summary": undefined,
  "tags": undefined,
}
`;
